<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#AEDBDB"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
<EditText
    android:id="@+id/etusername"
    android:hint="Userame"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/etpassword"
        android:hint="Password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btnLogin"
        android:text="Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/signup"
        android:text="Create new Account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>